@@ -1,4 +1,4 @@
-# Copyright (C) 2007 José Antonio Calvo Fernández <jacalvo@warp.es> 
+# Copyright (C) 2007 José Antonio Calvo Fernández <jacalvo@warp.es>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License, version 2, as
@@ -26,7 +26,7 @@ use ANSTE::Exceptions::InvalidFile;
 
 # Class: BasePreInstall
 #
-#   Writes the setup script for a base image that is executed 
+#   Writes the setup script for a base image that is executed
 #   on a mounted image, before creating the virtual machine.
 #   The generated script installs ansted and anste-slave in
 #   the base image.
@@ -69,7 +69,7 @@ sub new # (image) returns new CommInstallGen object
     die "Can't load package $system: $@" if $@;
 
     $self->{system} = "ANSTE::System::$system"->new();
-	
+
 	bless($self, $class);
 
 	return $self;
@@ -104,7 +104,7 @@ sub writeScript # (file)
 	print $file "#!/bin/sh\n";
 	my $host = $self->{image}->name();
 	print $file "\n# Installation script for ansted and anste-slave\n";
-	print $file "# Generated by ANSTE for host $host\n\n"; 
+	print $file "# Generated by ANSTE for host $host\n\n";
 
     print $file "# Receives the mount point of the image as an argument\n";
     print $file 'MOUNT=$1'."\n\n";
@@ -150,10 +150,11 @@ sub _writeCopyFiles # (file)
 
     my %fileDest = ("$deployPath/bin/ansted" => '/usr/local/bin/',
                     "$deployPath/bin/anste-slave" => '/usr/local/bin',
+                    "$deployPath/bin/anste-setup-*" => '/usr/local/bin',
                     "$deployPath/modules/ANSTE/Comm/*.pm" => $commPath,
                     "$deployPath/modules/ANSTE/Exceptions/*.pm" => $excPath,
-                    "$deployPath/scripts/ansted" => '/etc/init.d/');                 
-    
+                    "$deployPath/scripts/ansted" => '/etc/init.d/');
+
     foreach my $orig (keys %fileDest) {
         $command = $system->copyToMountCommand($orig, $fileDest{$orig});
         print $file "$command\n";
