@@ -103,7 +103,7 @@ sub writeScript # (file)
 	my $desc = $self->{host}->desc();
 	print $file "\n# Configuration file for host $name\n";
 	print $file "# Server description: $desc\n";
-	print $file "# Generated by ANSTE\n\n"; 
+	print $file "# Generated by ANSTE\n\n";
 
 	my @packages = @{$self->{host}->packages()->list()};
     if (@packages) {
@@ -175,6 +175,10 @@ sub _writeNetworkConfig # (file)
             }
         }
         my $cmd = $system->enableRouting(@ifaces);
+        print $file "$cmd\n";
+    }
+    unless ($host->type() eq 'none') {
+        my $cmd = $system->setupTypeScript($host->type());
         print $file "$cmd\n";
     }
 }
